
package Protos;

import "time_series.proto";

message SpikesSequence {
    repeated double seq = 1 [packed=true];
}


message SpikesList {
    repeated SpikesSequence spikes_list = 1;
}

message LabeledSpikesList {
    required SpikesList sl = 1;
    required PatternsTimeline ptl = 2;
}

