package Protos;


message NeuronStat {
    message SynStat {
        repeated double x = 1 [packed=true];
        repeated double w = 2 [packed=true];
    }
	repeated double p = 1 [packed=true];
    repeated double m = 3 [packed=true];
	repeated double u = 4 [packed=true];
    repeated double ga = 5 [packed=true];
	repeated SynStat syns = 6;
}

message AdExNeuronStat {
	repeated double a = 2 [packed=true];
}

message OptimalStdpStat {
    message CStat {
        repeated double c = 1 [packed=true];
    }
    repeated double b = 2 [packed=true];
    repeated CStat c_vals = 3;
    repeated double p_acc = 4;
}

message BCMRuleStat {
    message XStat {
        repeated double x = 1 [packed=true];
    }
    repeated double y = 2 [packed=true];
    repeated XStat x_vals = 3;
    repeated double p_acc = 4;
}


message RewardStat {
    repeated double r = 1;
    repeated double mean_r = 2;
}

message MaxLikelihoodStat {
    message ElTrace {
        repeated double x = 1 [packed=true];
    }
    repeated ElTrace el_traces = 1;
}

message StdpStat {
    message XTrace {
        repeated double x = 1 [packed=true];
    }
    repeated XTrace x_trace_vals = 1;
    repeated double y_trace = 2;
}
message TripleStdpStat {
    message XTrace {
        repeated double r1 = 1 [packed=true];
        repeated double r2 = 2 [packed=true];
    }
    repeated XTrace x_trace_vals = 1;
    repeated double o1 = 2;
    repeated double o2 = 3;
}
